tests/fixtures/semantics/valid/storage_storage_via_temp.ora
storage var a: u256;
storage var b: u256;

fn f() -> void {
    let tmp = b; // storage -> stack (ok)
    a = tmp;     // stack -> storage (ok)
}


